2008-08-25  Badlop  <badlop@process-one.net>

	* src/ejabberd_check.erl: Detect correctly MSSQL and ODBC
	configuration (EJAB-710)

2008-08-24  Geoff Cant  <gcant@process-one.net>

	* src/mod_mud/mod_muc_room.erl: is_visitor/2 fix - use get_role
	not get_affiliation

2008-08-22  Badlop  <badlop@process-one.net>

	* src/ejabberd_router.erl: Fix call to mnesia match_object

2008-08-21  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix names of chatroom to room, user to occupant
	* doc/guide.html: Likewise

2008-08-18  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_log.erl: MUC log files options: plaintext
	format; filename with only room name (EJAB-596)
	* doc/guide.tex: Document both options
	* doc/guide.html: Likewise

	* src/mod_register.erl: Change password using mod_register always
	returns success regardless of real result (EJAB-723)
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise

2008-08-18  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/node_dispatch.erl: Fix call to unexported function
	nodetree_default:get_subnodes/2

2008-08-17  Badlop  <badlop@process-one.net>

	* contrib/extract_translations/extract_translations.erl: Use
	Gettext PO for translators, export to ejabberd MSG (EJAB-648)
	* contrib/extract_translations/prepare-translation.sh: Likewise
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise
	* src/Makefile.in: New option 'make translations'
	* src/msgs/ejabberd.pot: Template translation file
	* src/msgs/*.po: Generated from old MSG files
	* src/msgs/*.msg: Automatic exported from PO files

2008-08-16  Badlop  <badlop@process-one.net>

	* src/msgs/sv.msg: Fixed formatting typos

	* src/gen_mod.erl: Export stop_module_keep_config/2 (EJAB-706)

2008-08-13  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Explain that LDAP is read-only storage (thanks to
	Evgeniy Khramtsov)